# RoboTwin_distillation

./: .gitignore
assets/: _download.py
policy/ACT/: imitate_episodes.py  train.sh
policy/ACT/detr/: main.py
policy/DP/: requirements.txt  visualize_expert_noise.py
policy/DP/diffusion_policy/config/: robot_dp_14.yaml
policy/DP/diffusion_policy/config/task/: default_task_14.yaml  default_task_16.yaml
policy/DP/diffusion_policy/dataset/: robot_image_dataset_with_rdt.py
policy/DP/diffusion_policy/workspace/: robotworkspace.py
policy/RDT/: collect_rdt_rollouts.py  deploy_policy.py  precompute_rdt_labels.py  precompute_rdt_labels.sh  visualize_action_diff.py  visualize_actions.sh  visualize_rdt_actions.py  visualize_rdt_labels.py
policy/pi0/: deploy_policy.yml  eval.sh  finetune.sh  finetune_resume.sh  pi_model.py  pyproject.toml
policy/pi0/docs/: fewshot_recipe.md  plan_star.md  plan_star_after_baseline.md
policy/pi0/scripts/: build_sampling_plan.py  compute_norm_stats.py  train.py  verify_action_horizon_boundary.py  verify_lerobot_episode_fields.py  verify_sampling_plan.py
policy/pi0/src/openpi/policies/: kuavo_policy.py  policy_config.py
policy/pi0/src/openpi/training/: augmentations.py  config.py  data_loader.py  sampling_plan.py
script/: _download_assets.sh  eval_policy.py  replay_zarr_actions.py  requirements.txt
task_config/: demo_clean.yml  demo_randomized.yml
